# github-security-alerts

./: .gitignore  .gitleaksignore  CONTRIBUTING  DEVELOP  DEVELOP.md  LICENSE  PUBLISH.md  README.md  angular.json  package-lock.json  package.json  release.sh  setup.sh
.github/: copilot-instructions.md
.github/workflows/: auto-update.yml  build.yml
src/: index.html  styles.scss  tsconfig.app.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.example
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alerts.rs  auth.rs  config.rs  main.rs  models.rs  repos.rs  state.rs  system.rs  tray.rs  updater.rs  window.rs
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
src/app/core/services/: github-rate-limit.service.ts  index.ts  update.service.ts
src/app/core/services/tauri/: tauri.service.ts
src/app/home/: home.component.html  home.component.scss  home.component.ts
src/app/shared/: shared.module.ts
src/app/shared/components/: index.ts
src/app/shared/components/alerts-list/: alerts-list.component.html  alerts-list.component.scss  alerts-list.component.ts
src/app/shared/components/footer/: footer.component.html  footer.component.scss  footer.component.ts
src/app/shared/components/header/: header.component.html  header.component.scss  header.component.ts
src/app/shared/components/login-panel/: login-panel.component.html  login-panel.component.scss  login-panel.component.ts
src/styles/: _colors.scss
(+10 files in other folders)
