[package]
name = "GithubSecurityAlerts"
version = "1.2.1"
description = "Github Security Alerts"
authors = ["you"]
license = ""
repository = ""
default-run = "GithubSecurityAlerts"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }
dotenv = "0.15"

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-updater = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
image = "0.24"
open = "5"
tiny_http = "0.12"
url = "2"
dirs = "5"
dotenv = "0.15"
tauri-plugin-single-instance = "2.0"
tauri-plugin-autostart = "2.0"
urlencoding = "2.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
